--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -419,7 +419,7 @@ h6 {
 #hero {
   width: 100%;
   height: 75vh;
-  background: url("../public/assets/img/hero-bg.jpg") top left;
+  background: url("../img/hero-bg.jpg") top left;
   background-size: cover;
   position: relative;
 }
