--- a/src/App.css
+++ b/src/App.css
@@ -703,13 +703,15 @@ section {
 .services .icon-box:hover .icon {
   border-color: #106eea;
 }
+
 .services .img-wrap {
-    height: 240px;
+  height: 240px;
 }
+
 .services .img-wrap img {
-    height: 100%;
-    max-width: 100%;
-    width: auto;
+  height: 100%;
+  max-width: 100%;
+  width: auto;
 }
 
 /*--------------------------------------------------------------
@@ -827,40 +829,46 @@ section {
 .contact .php-email-form button[type=submit]:hover {
   background: #3b8af2;
 }
+
 .contact .form-select {
   padding: 10px 15px;
-    font-size: 0.9rem;
-    color: #212529;
-    border-radius: 0;
+  font-size: 0.9rem;
+  color: #212529;
+  border-radius: 0;
 }
+
 .contact .qty {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding-left: 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-left: 0;
 }
+
 .contact .qty li {
-    display: block;
-    font-size: 15px;
-    color: #444444;
-    line-height: 20px;
-    margin-bottom: 20px;
+  display: block;
+  font-size: 15px;
+  color: #444444;
+  line-height: 20px;
+  margin-bottom: 20px;
 }
-.contact .qty span{
+
+.contact .qty span {
   color: #106eea;
 }
+
 i.bx.bx-check {
-    font-size: 50px;
-    color: #106eea;
-    background: #fff;
-    box-shadow: 0px 6px 15px #deebfd;
-    border-radius: 50px;
-    padding: 10px;
+  font-size: 50px;
+  color: #106eea;
+  background: #fff;
+  box-shadow: 0px 6px 15px #deebfd;
+  border-radius: 50px;
+  padding: 10px;
 }
+
 .thank-you {
-    height: 75vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 75vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1062,4 +1070,68 @@ i.bx.bx-check {
     text-align: center;
     padding: 2px 0;
   }
+}
+
+
+/* Stripe Payment Form */
+#payment-form {
+  border: #F6F9FC solid 1px;
+  border-radius: var(--radius);
+  padding: 20px;
+  margin: 20px 0;
+  box-shadow: 0 30px 50px -20px rgb(50 50 93 / 25%), 0 30px 60px -30px rgb(0 0 0 / 30%);
+}
+
+#messages {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
+  display: none;
+  /* hide initially, then show once the first message arrives */
+  background-color: #0A253C;
+  color: #00D924;
+  padding: 20px;
+  margin: 20px 0;
+  border-radius: var(--radius);
+  font-size: 0.7em;
+}
+
+.form--wrapper {
+  padding:clamp(50px,11vw, 250px) 15px;
+  max-width: 600px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+.overlay--loader {
+  position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(000,000,000,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
