--- a/src/App.css
+++ b/src/App.css
@@ -1125,6 +1125,42 @@ i.bx.bx-check {
     align-items: center;
 }
 
+
+.card-pricing .list-unstyled li {
+  padding: .5rem 0;
+  color: #6c757d;
+}
+.subscription__table > .pricing {
+display: flex;
+gap: 20px;
+}
+
+.subscription__table > .pricing > div {
+  flex-basis: 50%;
+  width: 50%;
+  transition: all 0.5s;
+}
+.subscription__table > .pricing > div:hover {
+  border: 1px solid #0a58ca;
+    box-shadow: 0px 0px 20px rgb(0 0 0 / 20%);
+}
+.customer--data .form--group {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+
+
+.success-msg{
+  padding-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 500px;
+}
+
+
 /* Safari */
 @-webkit-keyframes spin {
   0% { -webkit-transform: rotate(0deg); }
